--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.pancake{
+
+.pancake img{
     border: 1px;
     border-radius: 4px;
     padding: 5px;
@@ -6,5 +7,44 @@
 }
 
 ul {
-    color:aqua
+    color:black;
+    font-family: 'Comic Neue', cursive;
+
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111111;
+  }
+
+  .intro{
+    text-align: left;
+    float: right;
+    margin: 0 15px 0 0;
+  }
+
+  .corndog img{
+    border: 1px;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+  }
